objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineHelp</customHelpPage>
    <description>Individual line item on a quote.</description>
    <fields>
        <fullName>Additional_Capacity_GB__c</fullName>
        <label>Additional Capacity (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Discounted_List_Price__c</fullName>
        <label>Annual Discounted List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_List_Price__c</fullName>
        <label>Annual List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Net_Price__c</fullName>
        <label>Annual Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Subscription_Term__c</fullName>
        <formula>IF (  SBQQ__SegmentIndex__c &gt; 0, 
((  SBQQ__EndDate__c - SBQQ__StartDate__c) / 30.4375),
  SBQQ__Quote__r.Calculated_Subscription_Term__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Subscription Term (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discretionary_Discount__c</fullName>
        <formula>/* 
1 - ( SBQQ__NetPrice__c / SBQQ__RegularPrice__c )
*/

/* Updated by SD */
IF (SBQQ__RegularPrice__c = 0, 0, 1 - ( SBQQ__NetPrice__c / SBQQ__RegularPrice__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discretionary Discount %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Displayed_End_Date__c</fullName>
        <formula>IF (  SBQQ__SegmentIndex__c &gt; 0, 
IF ( ISBLANK ( SBQQ__EndDate__c ),  SBQQ__Quote__r.Calculated_End_Date_Old__c  , SBQQ__EndDate__c),  
SBQQ__Quote__r.Calculated_End_Date_Old__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Displayed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Displayed_Net_Unit_Price__c</fullName>
        <formula>/*IF ( SBQQ__SegmentIndex__c &gt; 0,  SBQQ__NetPrice__c  ,   Net_Unit_Price_ACV__c   )*/

/*
IF (   SBQQ__Quote__r.SBQQ__SubscriptionTerm__c  &gt; 0, Net_Unit_Price_ACV__c,  SBQQ__NetPrice__c)
*/

IF ( NOT(ISBLANK(TEXT(SBQQ__SubscriptionPricing__c))),  
IF ( SBQQ__SegmentIndex__c &gt; 0, SBQQ__NetPrice__c, Net_Unit_Price_ACV__c), 
SBQQ__NetPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Displayed Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Displayed_Regular_Unit_Price__c</fullName>
        <formula>/*IF (  SBQQ__SegmentIndex__c &gt; 0,   SBQQ__RegularPrice__c  ,  Regular_Unit_Price_ACV__c )*/
/*IF (   SBQQ__Quote__r.SBQQ__SubscriptionTerm__c  &gt; 0,  Regular_Unit_Price_ACV__c,  SBQQ__RegularPrice__c  )*/

/*
IF ( SBQQ__SegmentIndex__c &gt; 0, Regular_Unit_Price_ACV__c, 
IF ( SBQQ__Quote__r.SBQQ__SubscriptionTerm__c  &gt; 0, 
Regular_Unit_Price_ACV__c,  
SBQQ__RegularPrice__c  ))
*/

IF ( NOT(ISBLANK(TEXT(SBQQ__SubscriptionPricing__c))),  
IF ( SBQQ__SegmentIndex__c &gt; 0, SBQQ__RegularPrice__c, Regular_Unit_Price_ACV__c), 
SBQQ__RegularPrice__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Displayed Regular Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Displayed_Start_Date__c</fullName>
        <formula>IF (  SBQQ__SegmentIndex__c &gt; 1, IF ( ISBLANK ( SBQQ__StartDate__c ), SBQQ__Quote__r.SBQQ__StartDate__c, SBQQ__StartDate__c), SBQQ__Quote__r.SBQQ__StartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Displayed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Service__c</fullName>
        <formula>IF ( SBQQ__ProductFamily__c = &apos;Services&apos; || SBQQ__ProductFamily__c = &apos;Training&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Services__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Is Services</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Subscription__c</fullName>
        <formula>IF ( ISBLANK(TEXT( SBQQ__SubscriptionPricing__c )), &apos;No&apos;, &apos;Yes&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Subscription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Services_Amount__c</fullName>
        <label>Net Services Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Subscription_Total__c</fullName>
        <description>Net Subscription Total - Populated by Workflow - Used to calculate subscription amount</description>
        <label>Net Subscription Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price_ACV_Rollup__c</fullName>
        <label>Net Price - ACV (Rollup)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price_ACV__c</fullName>
        <formula>/* Original Formula 
SBQQ__NetPrice__c / (SBQQ__Quote__r.SBQQ__SubscriptionTerm__c / SBQQ__DefaultSubscriptionTerm__c)
*/

/* Original - Modified */
/*
IF ( ISBLANK(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) || SBQQ__Quote__r.SBQQ__SubscriptionTerm__c = 0, 
0,
(SBQQ__NetPrice__c * IF( ISBLANK(SBQQ__DefaultSubscriptionTerm__c), 12, SBQQ__DefaultSubscriptionTerm__c) ) / SBQQ__Quote__r.SBQQ__SubscriptionTerm__c  )
*/

/* New - Updated */
/*
IF ( ISBLANK( SBQQ__Quote__r.Calculated_Subscription_Term__c ), 
0,
(SBQQ__NetPrice__c * IF( ISBLANK(SBQQ__DefaultSubscriptionTerm__c), 12, SBQQ__DefaultSubscriptionTerm__c) ) / SBQQ__Quote__r.Calculated_Subscription_Term__c  )*/

IF ( Calculated_Subscription_Term__c &lt;&gt; 0 ,
SBQQ__NetPrice__c *  SBQQ__DefaultSubscriptionTerm__c /  Calculated_Subscription_Term__c , 0)</formula>
        <label>Net Unit Price - ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family_Rollup__c</fullName>
        <label>Product Family Rollup</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Rollup__c</fullName>
        <label>Product Name Rollup</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regular_Discount_Per_Product__c</fullName>
        <formula>/* Updated by SD */
IF (SBQQ__RegularPrice__c = 0, 0, 1 - (  SBQQ__CustomerPrice__c  / SBQQ__RegularPrice__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Discount (Per Product)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Regular_Price_Annual__c</fullName>
        <formula>Regular_Unit_Price_ACV__c *  SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Price - Annual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regular_Unit_Price_ACV__c</fullName>
        <formula>/* Original Formula
SBQQ__RegularPrice__c / ( SBQQ__Quote__r.SBQQ__SubscriptionTerm__c / SBQQ__DefaultSubscriptionTerm__c))
*/

/* Current Formula */
/*
IF ( ISBLANK(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) || SBQQ__Quote__r.SBQQ__SubscriptionTerm__c = 0, 
0,
(SBQQ__RegularPrice__c * IF( ISBLANK(SBQQ__DefaultSubscriptionTerm__c), 12, SBQQ__DefaultSubscriptionTerm__c) ) / SBQQ__Quote__r.SBQQ__SubscriptionTerm__c  )
*/

/* Revised Formula - Not implemented yet*/
/*
IF ( ISBLANK( SBQQ__Quote__r.Calculated_Subscription_Term__c ), 
0,
(SBQQ__RegularPrice__c * IF( ISBLANK(SBQQ__DefaultSubscriptionTerm__c), 12, SBQQ__DefaultSubscriptionTerm__c) ) / SBQQ__Quote__r.Calculated_Subscription_Term__c  )*/

IF ( Calculated_Subscription_Term__c &lt;&gt; 0 ,
SBQQ__RegularPrice__c *  SBQQ__DefaultSubscriptionTerm__c /  Calculated_Subscription_Term__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Unit Price - ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requires_Approval__c</fullName>
        <formula>/*IF ( Regular_Discount_Per_Product__c &gt; 0.10,  IMAGE(&quot;/resource/flag_mark_red_icon&quot;, &quot;Requires Approval&quot;, 20, 20), NULL)*/

IF ( Regular_Discount_Per_Product__c &gt; 0.20, IMAGE(&quot;/resource/flag_mark_red_icon&quot;, &quot;Requires Approval&quot;, 20, 20), IF ( Regular_Discount_Per_Product__c &gt; 0.10,  IMAGE(&quot;/resource/CLDY_Yellow_Flag&quot;, &quot;Requires Approval&quot;, 20, 20), NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional customer discount extended on this line item in terms of absolute amount.</description>
        <inlineHelpText>Additional customer discount extended on this line item in the form of an absolute amount.</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscount__c</fullName>
        <description>Total additional discount extends on this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</description>
        <formula>(SBQQ__RegularPrice__c - SBQQ__CustomerPrice__c) *  SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total additional discounts extended to this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</inlineHelpText>
        <label>Additional Disc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalQuantity__c</fullName>
        <description>Additional quantity for this product which contributes to volume discount calculations.</description>
        <inlineHelpText>Additional quantity for this product that contributes to volume discount calculations</inlineHelpText>
        <label>Additional Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>For products sold in batches quantity in each batch. Defaulted from the product record.</description>
        <inlineHelpText>If products are sold in batches, this stores the quantity in each batch,defaulted from the product.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Block Price record used to price this line item.</description>
        <inlineHelpText>Block Price record used to price this line item.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this line item represents a package -- meaning it includes other line items in this quote.</description>
        <inlineHelpText>Indicates this line item represents a package -- meaning it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCost__c</fullName>
        <description>Total cost of components in this package.</description>
        <inlineHelpText>Total cost of components in this package.</inlineHelpText>
        <label>Component Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentListTotal__c</fullName>
        <description>List total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>Total list amount of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component List Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentSubscriptionScope__c</fullName>
        <description>Subscription scope set at the component level. This field overrides the subscriptions cope copied from the product.</description>
        <inlineHelpText>Subscription scope set at the component level. This field overrides the subscription scope copied from the product.</inlineHelpText>
        <label>Component Subscription Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentTotal__c</fullName>
        <description>Sum total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>Sum total amount of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component Net Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentUpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</description>
        <inlineHelpText>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</inlineHelpText>
        <label>Component Uplifted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentVisibility__c</fullName>
        <description>Visibility of this component line item.</description>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__QuoteLineVisibility__c)</formula>
        <inlineHelpText>Indicates the visibility of the component line item.</inlineHelpText>
        <label>Component Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity (historic).</description>
        <inlineHelpText>Discount rate compounded by quantity (historic).</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</description>
        <inlineHelpText>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</inlineHelpText>
        <label>Configuration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractedPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contracted price if the product has negotiated pricing for opportunity&apos;s account.</description>
        <inlineHelpText>Contracted price if the product has negotiated pricing for the opportunity&apos;s account.</inlineHelpText>
        <label>Contracted Price</label>
        <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether cost can be edited on this line item.</description>
        <inlineHelpText>Specifies whether cost can be edited on this line item.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cost record used to cost this line item.</description>
        <inlineHelpText>Cost record used to cost this line item.</inlineHelpText>
        <label>Cost</label>
        <referenceTo>SBQQ__Cost__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerPrice__c</fullName>
        <description>Customer unit price for the product quoted by this line item. This is the Net Unit Price excluding any partner discounts.</description>
        <inlineHelpText>Customer unit price for the product quoted by this line item. This is the Net Unit Price excluding any partner discounts.</inlineHelpText>
        <label>Customer Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerTotal__c</fullName>
        <description>Customer total price for this quote line item. This is the Net Total excluding any partner discounts.</description>
        <formula>IF(AND(SBQQ__Renewal__c, !SBQQ__Existing__c, ISBLANK(SBQQ__PriorQuantity__c)), 0, SBQQ__CustomerPrice__c * SBQQ__EffectiveQuantity__c)</formula>
        <inlineHelpText>Customer total price for this quote line item. This is the Net Total excluding any partner discounts.</inlineHelpText>
        <label>Customer Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultQuantity__c</fullName>
        <description>Specifies the starting quantity of the product when added.</description>
        <formula>SBQQ__Product__r.SBQQ__DefaultQuantity__c</formula>
        <inlineHelpText>Specify the starting quantity of the product when added.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this line item.</description>
        <inlineHelpText>Description for this line item.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule to be used in computing volume unit price. This field is copied from the corresponding product.</description>
        <inlineHelpText>Discount schedule to be used in computing volume unit price. This field is copied from the corresponding product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>R00N70000001opkuEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount tier used by this line item. This field is only populated if product is volume discounted and discount schedule is of type &quot;Range&quot;.</description>
        <inlineHelpText>Discount tier used by this line item. This field is only populated if a volume discounted was applied and discount schedule is of type &quot;Range&quot;.</inlineHelpText>
        <label>Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Quote Lines (Volume Discounted)</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional customer discount extended for this line item expressed in terms of percentage.</description>
        <inlineHelpText>Additional customer discount extended to this line item expressed in form of a percentage.</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Distributor discount applied to this line.</description>
        <inlineHelpText>Distributor discount applied to this line.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__EffectiveEndDate__c</fullName>
        <description>Effective end date for this subscription.</description>
        <formula>IF(ISBLANK(SBQQ__EndDate__c),
  IF(ISBLANK(SBQQ__Group__r.SBQQ__EndDate__c),SBQQ__Quote__r.SBQQ__EndDate__c,SBQQ__Group__r.SBQQ__EndDate__c),
  SBQQ__EndDate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective end date for this subscription.</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__EffectiveQuantity__c</fullName>
        <description>Effective quantity used in computing totals. Same as quantity unless the product is block priced or covered by &quot;Slab&quot; discount schedule.</description>
        <formula>IF(ISPICKVAL(SBQQ__PricingMethod__c, &apos;Block&apos;) &amp;&amp; SBQQ__Quantity__c - SBQQ__PriorQuantity__c = 0, 0,
IF(ISPICKVAL(SBQQ__PricingMethod__c, &apos;Block&apos;), 1,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; OR(SBQQ__Quantity__c - SBQQ__PriorQuantity__c = 0, SBQQ__Quantity__c = 0 &amp;&amp; SBQQ__Renewal__c), 0,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;), 1,
IF(AND(SBQQ__Existing__c, ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;), SBQQ__Quantity__c - SBQQ__PriorQuantity__c &lt; 0), 0,
IF(AND(SBQQ__Existing__c, ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;Percent Of Total&apos;), SBQQ__ListPrice__c != 0, SBQQ__Quantity__c - SBQQ__PriorQuantity__c &gt;=0), SBQQ__Quantity__c,
IF(SBQQ__Existing__c, SBQQ__Quantity__c - SBQQ__PriorQuantity__c,
SBQQ__Quantity__c)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective quantity used in computing totals. Same as quantity unless the product is block priced or covered by &quot;Slab&quot; discount schedule.</inlineHelpText>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__EffectiveStartDate__c</fullName>
        <description>Effective start date for this subscription.</description>
        <formula>IF(ISBLANK(SBQQ__StartDate__c),
  IF(ISBLANK(SBQQ__Group__r.SBQQ__StartDate__c),SBQQ__Quote__r.SBQQ__StartDate__c,SBQQ__Group__r.SBQQ__StartDate__c),
  SBQQ__StartDate__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective start date for this subscription.</inlineHelpText>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>Date the service represented by this line item will end (only applies if product is a subscription).</description>
        <inlineHelpText>Date the service represented by this line item will end (only applies if product is a subscription).</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the customer already owns this product. This is typically used for products with options during add-on quoting. The product is on the quote solely to drive the Configurator.</description>
        <inlineHelpText>Indicates the customer already owns this product. This is typically used for products with options during add-on quoting. The product is on the quote solely to drive the Configurator.</inlineHelpText>
        <label>Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__GrossProfitAmount__c</fullName>
        <description>Gross profit amount on this line item.</description>
        <formula>IF(OR(SBQQ__Bundled__c, SBQQ__Renewal__c, ISBLANK(SBQQ__UnitCost__c)), null, (SBQQ__NetPrice__c  - SBQQ__UnitCost__c) * SBQQ__EffectiveQuantity__c)</formula>
        <inlineHelpText>Gross profit amount on this line item.</inlineHelpText>
        <label>Gross Profit (Amt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group to which this line belongs, if any.</description>
        <inlineHelpText>Group to which this line belongs, if any.</inlineHelpText>
        <label>Group</label>
        <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides this line item in generated PDF documents.</description>
        <inlineHelpText>Hides this line item in generated PDF documents.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Incomplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set internally by the application logic when a line is saved to the database that&apos;s incomplete. This may happen when price rules are evaluated. Test this field in validation rules to avoid them firing prematurely. Do NOT add to page layout or otherwise update.</description>
        <inlineHelpText>Internal application logic used to control when rules, such as validation rules, trigger.</inlineHelpText>
        <label>Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List unit price for the product quoted by this line item.</description>
        <inlineHelpText>List unit price for the product quoted by this line item.</inlineHelpText>
        <label>List Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListTotal__c</fullName>
        <description>List total price for this quote line item.</description>
        <formula>IF(OR(AND(SBQQ__Renewal__c, !SBQQ__Existing__c, ISBLANK(SBQQ__PriorQuantity__c)), SBQQ__Bundled__c), 0,
  CASE(SBQQ__PricingMethod__c,
    &apos;Block&apos;, IF(ISBLANK(SBQQ__ProratedListPrice__c), SBQQ__EffectiveQuantity__c * SBQQ__ListPrice__c * IF(ISBLANK(SBQQ__ProrateMultiplier__c),1, SBQQ__EffectiveQuantity__c * SBQQ__ProrateMultiplier__c),SBQQ__ProratedListPrice__c),
    IF(ISBLANK(SBQQ__ProratedListPrice__c),SBQQ__ListPrice__c * IF(ISBLANK(SBQQ__ProrateMultiplier__c),1, SBQQ__ProrateMultiplier__c),SBQQ__ProratedListPrice__c) * IF(SBQQ__Existing__c, IF(AND(SBQQ__Renewal__c, SBQQ__Quantity__c == 0), SBQQ__Quantity__c, SBQQ__Quantity__c - SBQQ__PriorQuantity__c), SBQQ__Quantity__c)
  )
)</formula>
        <inlineHelpText>List total price for this quote line item.</inlineHelpText>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup amount for this line item.</description>
        <inlineHelpText>Markup amount for this line item.</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Markup on this line item expressed as a percentage.</description>
        <inlineHelpText>Markup on this line item expressed as a percentage.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Markup__c</fullName>
        <description>Markup amount on this item. This value is automatically calculated by applying markup rate or absolute amount, whichever is specified.</description>
        <formula>IF(NOT(ISBLANK(SBQQ__MarkupRate__c)), SBQQ__UnitCost__c * SBQQ__MarkupRate__c, SBQQ__UnitCost__c + SBQQ__MarkupAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Markup amount on this item. This value is automatically calculated by applying markup rate or absolute amount, whichever is specified.</inlineHelpText>
        <label>Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MaximumPrice__c</fullName>
        <description>Maximum unit price for this product. Used to enforce price ceiling for products with dynamically calculated prices.</description>
        <inlineHelpText>Maximum unit price for this product. Used to enforce price ceiling for products with dynamically calculated prices.</inlineHelpText>
        <label>Maximum Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>